--- a/src/app/customer/component/customer-payment/customer-payment.component.html
+++ b/src/app/customer/component/customer-payment/customer-payment.component.html
@@ -85,7 +85,7 @@
               <div class="col-sm-5 col-md-5 pull-right">
                 <div class="form-group">
                   <label for="cvCode">
-                    CV CODE</label>
+                    CVV CODE</label>
                   <input type="password" class="form-control" formControlName="cvCode" placeholder="CV" required />
                   <!--Input field for CVV number-->
                   <div *ngIf="rForm.controls['cvCode'].touched && rForm.controls['cvCode'].invalid" class="alert">
