--- a/src/app/shared/body/body.component.css
+++ b/src/app/shared/body/body.component.css
@@ -11,7 +11,7 @@
 
 
  .carousel-item {
-   height: 32rem;
+   height: 44rem;
    background-color: #777;
  }
  .carousel-item > img {
@@ -19,7 +19,7 @@
    top: 0;
    left: 0;
    min-width: 100%;
-   height: 32rem;
+   height: 44rem;
    filter: brightness(40%);
    -webkit-filter: brightness(40%);
    -moz-filter: brightness(40%);
@@ -43,3 +43,30 @@
    border: #fff;
    color:#000;
  }
+
+
+.thim-click-to-bottom {
+  position: absolute;
+  bottom: 10%;
+  left: 50%;
+  width: 40px;
+  height: 40px;
+  font-size: 40px;
+  line-height: 40px;
+  -webkit-animation: bounce 2s infinite ease-in-out;
+}
+.thim-click-to-bottom i {
+  color: #fff;
+  padding: 20px 10px;
+  border: 1px solid;
+  border-radius: 20px;
+font-size: 15px;
+}
+@-webkit-keyframes bounce {
+0%, 20%, 60%, 100%  { -ms-transform: translateY(0); }
+0%, 20%, 60%, 100%  { -o-transform: translateY(0); }
+0%, 20%, 60%, 100%  { -moz-transform: translateY(0); }
+0%, 20%, 60%, 100%  { -webkit-transform: translateY(0); }
+  40%  { -webkit-transform: translateY(-20px); }
+80% { -webkit-transform: translateY(-10px); }
+}
