--- a/src/app/shared/body/body.component.html
+++ b/src/app/shared/body/body.component.html
@@ -47,4 +47,9 @@
            <span class="carousel-control-next-icon" aria-hidden="true"></span>
            <span class="sr-only">Next</span>
          </a>
+         <div class="thim-click-to-bottom">
+          <a href="#services" class="scroll">
+            <i class="fa fa-chevron-down"></i>
+          </a>
+        </div>
        </div>
