--- a/src/app/customer/component/product-list/product-list.component.html
+++ b/src/app/customer/component/product-list/product-list.component.html
@@ -19,8 +19,6 @@
           <a class="dropdown-item" (click)="sortBy('priceHL')">{{ 'products.price_high_to_low' | translate }}</a>
           <a class="dropdown-item" (click)="sortBy('quantityLH')">{{ 'products.quantity_low_to_high' | translate }}</a>
           <a class="dropdown-item" (click)="sortBy('quantityHL')">{{ 'products.quantity_high_to_low' | translate }}</a>
-          <a class="dropdown-item" (click)="sortBy('distance')">{{ 'products.distance' | translate }}</a>
-          <a class="dropdown-item" (click)="sortBy('popularity')">{{ 'products.popular' | translate }}</a>
         </div>
       </div>
     </div>
@@ -55,7 +53,7 @@
       <div class="col-md-10">
         <div class="container">
           <div class="row">
-            <div class="col-md-6 col-lg-4" *ngFor="let item of products | paginate:{itemsPerPage:6,currentPage:p}">
+            <div class="col-md-6 col-lg-4" *ngFor="let item of products | paginate:{itemsPerPage:productsToShowInOnePage,currentPage:p}">
               <div class="card shadow p-2 mb-3">
                 <!-- Card image -->
                 <div class="view overlay zoom">
@@ -79,7 +77,7 @@
                       <b>{{ 'products.quantity' | translate }}:</b>{{item.quantity}} Kg</p>
                   </div>
                   <hr>
-                  <span>
+                  <span *ngIf="role=='Customer'">
                     <button type="button" class="btn btn-success mt-4" (click)="addToCart(item)" data-toggle="modal" data-target="#exampleModal1">{{ 'products.add_to_bag' | translate }} </button>
                   </span>
                 </div>
@@ -88,7 +86,7 @@
           </div>
         </div>
         <!-- end of search results-->
-        <pagination-controls (pageChange)="p=$event" *ngIf="products[0]"></pagination-controls>
+        <pagination-controls *ngIf="products.length>productsToShowInOnePage" (pageChange)="p=$event"></pagination-controls>
       </div>
     </ng-template>
     <ng-template #empty>
