--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -75,101 +75,70 @@
 </footer> -->
 <!--/.Footer-->
 
-
-<!--Footer-->
-<footer class="page-footer font-small pt-0">
-
-  <!--Footer Links-->
-  <div class="container">
-
-    <!--Grid row-->
-    <div class="row pt-5 mb-3 text-center d-flex justify-content-center">
-      <!--Grid column-->
-      <div class="col-md-2 mb-3">
-        <h6 class="text-uppercase font-weight-bold">
-          <a routerLink="/about">About us</a>
-        </h6>
+<footer>
+    <div class="footer-top">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4 col-lg-4 footer-about wow fadeInUp">
+            <img class="logo-footer" src="../../../assets/Header/kkd_logo.png" alt="logo-footer" data-at2x="assets/img/logo.png">
+            <p>
+              We are a young company always looking for new and creative ideas to help you with our products in your everyday work.
+            </p>
+            <p><a href="#">Our Team</a></p>
+                </div>
+          <div class="col-md-4 col-lg-4 offset-lg-1 footer-contact wow fadeInDown">
+            <h3>Contact</h3>
+                <p><i class="fa fa-map-marker"></i> Via Rossini 10, 10136 Turin Italy</p>
+                <p><i class="fa fa-phone"></i> Phone: (0039) 333 12 68 347</p>
+                <p><i class="fa fa-envelope"></i> Email: <a href="mailto:hello@domain.com">hello@domain.com</a></p>
+                <p><i class="fa fa-skype"></i> Skype: you_online</p>
+                </div>
+                <div class="col-md-4 col-lg-3 footer-social wow fadeInUp">
+                  <h3>Follow us</h3>
+                  <p>
+                    <a href="#"><i class="fa fa-facebook"></i></a> 
+          <a href="#"><i class="fa fa-twitter"></i></a> 
+          <a href="#"><i class="fa fa-google-plus"></i></a> 
+          <a href="#"><i class="fa fa-instagram"></i></a> 
+          <a href="#"><i class="fa fa-pinterest"></i></a>
+                  </p>
+                </div>
+          </div>
       </div>
-      <!--Grid column-->
-
-      <!--Grid column-->
-      <div class="col-md-2 mb-3">
-        <h6 class="text-uppercase font-weight-bold">
-          <a routerLink="/policies">Policies</a>
-        </h6>
-      </div>
-      <!--Grid column-->
-
-      <!--Grid column-->
-      <div class="col-md-2 mb-3">
-        <h6 class="text-uppercase font-weight-bold">
-          <a routerLink="/help">Help</a>
-        </h6>
-      </div>
-      <!--Grid column-->
-
-      <!--Grid column-->
-      <div class="col-md-2 mb-3">
-        <h6 class="text-uppercase font-weight-bold">
-          <a routerLink="/support">Support</a>
-        </h6>
-      </div>
-      <!--Grid column-->
-
-      <!--Grid column-->
-      <div class="col-md-2 mb-3">
-        <h6 class="text-uppercase font-weight-bold">
-          <a routerLink="/connect">Contact</a>
-        </h6>
-      </div>
-      <!--Grid column-->
-
     </div>
-    <!--Grid row-->
-    <div class="row pb-3 col-md-5 col-12 mt-5">
-
-      <!--Grid column-->
-      <div class="col-md-12">
-
-        <div class="mb-3 flex-center social-icons">
-          <!--Facebook-->
-          <a class="fb-ic">
-            <i class="fa fa-facebook fa-lg white-text mr-md-4"> </i>
-          </a>
-          <!--Twitter-->
-          <a class="tw-ic">
-            <i class="fa fa-twitter fa-lg white-text mr-md-4"> </i>
-          </a>
-          <!--Google +-->
-          <a class="gplus-ic">
-            <i class="fa fa-google-plus fa-lg white-text mr-md-4"> </i>
-          </a>
-          <!--Linkedin-->
-          <a class="li-ic">
-            <i class="fa fa-linkedin fa-lg white-text mr-md-4"> </i>
-          </a>
-          <!--Instagram-->
-          <a class="ins-ic">
-            <i class="fa fa-instagram fa-lg white-text mr-md-4"> </i>
-          </a>
-          <!--Pinterest-->
-          <a class="pin-ic">
-            <i class="fa fa-pinterest fa-lg white-text"> </i>
-          </a>
-        </div>
+    <div class="footer-bottom">
+      <div class="container">
+        <div class="row">
+             <div class="col-md-5 footer-copyright">
+                  <p>&copy; 2018 Kisan Ki Dukan</p>
+                </div>
+             <div class="col-md-7 footer-menu">
+                  <nav class="navbar navbar-dark navbar-expand-md">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link scroll-link" routerLink="/about">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link scroll-link" routerLink="/policies">Policies</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link scroll-link" routerLink="/help">Help</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link scroll-link" routerLink="/support">Support</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link scroll-link" routerLink="/connect">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+                </div>
+           </div>
       </div>
-      <!--Grid column-->
     </div>
-    <!--Grid row-->
-
-  </div>
-  <!--/Footer Links-->
-
-  <!--Copyright-->
-  <div class="footer-copyright py-3 text-center">
-    © 2018 Copyright Kisan Ki Dukan
-  </div>
-  <!--/Copyright-->
-
-</footer>
-<!--/Footer-->
+  </footer>
