--- a/src/app/farmer/component/farmer-dashboard/farmer-current-order/farmer-current-order.component.css
+++ b/src/app/farmer/component/farmer-dashboard/farmer-current-order/farmer-current-order.component.css
@@ -14,11 +14,11 @@ h1 { font-size: 1.5em; margin: 10px; }
   margin: 5px;
   font-size: 1.25em;
   display: inline-block;
-  content: "\f005";
+  content: "☆";
 }
 
 .rating > .half:before {
-  content: "\f089";
+  content: "☆";
   position: absolute;
 }
 
