--- a/src/app/farmer/component/farmer-dashboard/farmer-current-order/farmer-current-order.component.html
+++ b/src/app/farmer/component/farmer-dashboard/farmer-current-order/farmer-current-order.component.html
@@ -1,31 +1,31 @@
-<div class="container mt-100" style="margin-bottom: 170px;">
+<div class="container mb-2 mt-5">
   <div class="row">
     <div *ngFor="let order of orderList | paginate: {itemsPerPage:8,currentPage:p}" class="col-lg-3">
 
-      <div class="card shadow p-2 mb-3" style="height: 20rem;">
+      <div class="card shadow p-2 mb-3" style="height: 21rem;">
         <!-- Card content -->
         <div class="card-body text-center">
           <!-- Title -->
-          <h5 class="card-title">
+          <h5 class="card-title py-2">
             <strong>{{order.orderId}}</strong>
           </h5>
           <!-- Text -->
           <div class="text-area">
-            <p class="card-text">
+            <p class="card-text py-1">
               <b>{{ 'farmer_current_order.customer_id' | translate }}: </b>{{order.kkdCustId}}</p>
-            <p class="card-text">
+            <p class="card-text py-1">
               <b>{{ 'farmer_current_order.product_name' | translate }}: </b>{{order.name}}</p>
-            <p class="card-text">
-              <b>{{ 'farmer_current_order.address' | translate }}: </b>{{order.address.addressLine}} {{order.address.city}}
-              {{order.address.state}} {{order.address.district}} {{order.address.pincode}}</p>
-            <p class="card-text">
+            <p class="card-text py-1">
+              <b>{{ 'farmer_current_order.address' | translate }}: </b>{{order.address?.addressLine}} {{order.address?.city}}
+              {{order.address?.state}} {{order.address?.district}} {{order.address?.pincode}}</p>
+            <p class="card-text py-1">
               <b>{{ 'farmer_current_order.quantity' | translate }}: </b>{{order.quantity}}</p>
-            <p class="card-text">
+            <p class="card-text py-1">
               <b>{{ 'farmer_current_order.amount' | translate }}: </b>{{order.price}}</p>
             <div *ngIf="order.farmerStatus=='Accept'">
-              <p class="card-text">
+              <p class="card-text py-1">
                 <b>{{ 'farmer_current_order.validity_of_order' | translate }}: </b>{{order.validityOfOrder}}</p>
-              <p class="card-text">
+              <p class="card-text py-1">
                 <b>{{ 'farmer_current_order.customer_mobileno' | translate }}: </b>{{order.mobileNo}}</p>
             </div>
           </div>
@@ -41,7 +41,7 @@
               {{ 'farmer_current_order.accept' | translate }}
             </button>
 
-            <button type="button" class="btn btn-primary mt-5" data-toggle="modal" data-target="#exampleModal2" (click)="setData(order.orderId)">
+            <button type="button" class="btn btn-primary mt-5 ml-3" data-toggle="modal" data-target="#exampleModal2" (click)="setData(order.orderId)">
               {{ 'farmer_current_order.decline' | translate }}
             </button>
           </span>
@@ -191,9 +191,9 @@
             <input type="radio" id="star1half" name="rating" value="1.5" [(ngModel)]="avgRating" />
             <label class="half" for="star1half" title="Meh - 1.5 stars"></label>
             <input type="radio" id="star1" name="rating" value="1" [(ngModel)]="avgRating" />
-            <label class="full" for="star1" title="Sucks big time - 1 star"></label>
+            <label class="full" for="star1" title="bad - 1 star"></label>
             <input type="radio" id="starhalf" name="rating" value="0.5" [(ngModel)]="avgRating" />
-            <label class="half" for="starhalf" title="Sucks big time - 0.5 stars"></label>
+            <label class="half" for="starhalf" title="bad - 0.5 stars"></label>
           </fieldset>
           <div class="modal-footer">
             <button type="button" class="btn btn-primary" data-dismiss="modal" (click)="rateCustomer()">{{ 'farmer_current_order.submit' | translate }}</button>
